# wauldo-sdk-rust

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: publish.yml
src/: agents.rs  conversation.rs  history.rs  http_client.rs  http_types.rs  lib.rs  memory.rs  retry.rs  transport.rs  workflows.rs
src/agents/: client.rs  mod.rs  types.rs
src/client/: planning.rs
tests/: guard_test.rs
